<resources>
    <string name="app_name">"TinkLabsTest"</string>
    <string name="tab_guide">"City guide"</string>
    <string name="tab_shop">"Shop"</string>
    <string name="tab_eat">"Eat"</string>
</resources>
